# VOICE

./: .env.example  .mcp.json  CLAUDE.md  DYNAMODB_SETUP.md  LOCAL_AI_CHANGES.md  LOCAL_LLM_SETUP.md  OPENAI_SETUP.md  PROJECT_STATUS.md  QUICKSTART_DYNAMODB.md  QUICKSTART_LOCAL_AI.md  README_LOCAL_AI.md  TODO_MANAS.md  agent_manager.py  app.py  call_manager.py  config.py  database.py  dependencies.py  examples.py  exceptions.py  fix_env.ps1  install_local_ai.py  local_llm_client.py  local_tts_client.py  migrate_to_sigmoyd_schema.py  models.py  pyproject.toml  s3_uploader.py  session_manager.py  test.py  test_local_setup.py
.claude/: settings.local.json
examples/: agent_config_example.json  agent_config_hindi.json
scripts/: create_s3_bucket.py  create_tables.py  manage_agents.py  seed_data.py  test_integration.py  update_agent_prompts.py
tools/: dynamo.py  tool_classes.py
