[project]
name = "voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.2",
    "aioboto3>=13.2.0",
    "fastapi==0.104.1",
    "openai>=1.0.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "twilio==8.10.0",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "httpx>=0.25.0",
    "coqui-tts[codec]>=0.22.0",
]
